# bla

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
bla/: main.py
bla/adapters/repository/: __init__.py  sqlite_tasks_repository.py
bla/adapters/repository/unit_of_work/: unit_of_work.py
bla/adapters/rest/routes/: __init__.py
bla/adapters/rest/routes/tasks/: routes.py
bla/application/interfaces/repositories/: __init__.py  tasks_repository.py
bla/application/use_cases/: __init__.py  create_task_use_case.py  get_task_use_case.py  get_tasks_use_case.py
bla/domain/entities/: __init__.py  base.py  task.py
bla/domain/interfaces/repositories/: tasks_repository.py
bla/domain/interfaces/unit_of_work/: unit_of_work.py
bla/domain/models/: __init__.py  task.py  task_model.py
bla/domain/queries/: __init__.py  pagination_query.py  tasks_query.py
bla/infrastructure/api/: __init__.py  api.py
bla/infrastructure/database/: __init__.py  database_connection.py
bla/infrastructure/database/unit_of_work/: __init__.py  unit_of_work.py
