[project]
name = "bla"
version = "0.1.0"
description = ""
authors = [
    {name = "mendelgusmao",email = "mendelsongusmao@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "fastapy (>=1.0.5,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "fastapi-injector (>=0.6.2,<0.7.0)",
    "fastapi-pagination (>=0.12.34,<0.13.0)",
    "dynaconf (>=3.2.10,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pre-commit = "^4.1.0"
black = "^25.1.0"
flake8 = "^7.1.2"
isort = "^6.0.0"
mypy = "^1.15.0"
coverage = "^7.6.12"
httpx = "^0.28.1"
